--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -302,6 +302,12 @@ $motion-duration: $duration-moderate-02;
     margin: $spacing-04 0 0;
   }
 
+  // Unfortunately <Layer> creates an extra DOM element.  Try not to let it break
+  // existing layouts.
+  .#{$block-class}__layer {
+    display: contents;
+  }
+
   &.#{$block-class} .#{$block-class}__body {
     display: flex;
     flex-direction: row;
