--- a/packages/ibm-products/src/components/PageHeader/next/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/PageHeader/next/_storybook-styles.scss
@@ -32,3 +32,12 @@
   background-color: theme.$layer-01;
   block-size: inherit;
 }
+
+[data-hidden] {
+  display: none;
+}
+
+.breadcrumb-bar-button {
+  height: 40px;
+  width: 40px;
+}
