fix: user avatar style inheritance on web-component (#7713)
* fix: user avatar style inheritance on web-component

* fix: box sizing on user avatar

---------

Co-authored-by: David Menendez <damenend@gmail.com>

--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
@@ -28,6 +28,8 @@ $carbon-prefix: 'cds';
 $block-class: #{$prefix}--user-avatar;
 
 :host(#{$prefix}-user-avatar) {
+  display: inline-block;
+
   .#{$block-class} {
     box-sizing: border-box;
   }
