chore: rename bignumbers to bignumber

--- a/packages/ibm-products-styles/src/components/BigNumber/_big-number.scss
+++ b/packages/ibm-products-styles/src/components/BigNumber/_big-number.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2024, 2024
+// Copyright IBM Corp. 2024, 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -17,11 +17,11 @@
 // TODO: @use '@carbon/styles/scss/grid';
 // or
 // TODO: @use '@carbon/styles/scss/grid';
-// BigNumbers uses the following Carbon for IBM Products components:
-// TODO: @use(s) of IBM Products component styles used by BigNumbers
+// BigNumber uses the following Carbon for IBM Products components:
+// TODO: @use(s) of IBM Products component styles used by BigNumber
 // The block part of our conventional BEM class names (blockClass__E--M).
-$block-class: #{c4p-settings.$pkg-prefix}--big-numbers;
-$skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
+$block-class: #{c4p-settings.$pkg-prefix}--big-number;
+$skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-number-skeleton;
 
 .#{$block-class}__label {
   @include type-style('label-01');
