--- a/packages/ibm-products-styles/src/components/_index.scss
+++ b/packages/ibm-products-styles/src/components/_index.scss
@@ -62,7 +62,7 @@
 @use './Guidebanner';
 @use './InlineTip';
 @use './NonLinearReading';
-@use './BigNumbers';
+@use './BigNumber';
 @use './TruncatedList';
 @use './TruncatedText';
 @use './InterstitialScreen';
