--- a/packages/ibm-products/src/components/BigNumber/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/BigNumber/_storybook-styles.scss
@@ -7,4 +7,4 @@
 
 @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
 
-// TODO: add any additional styles used by BigNumbers.stories.js
+// TODO: add any additional styles used by BigNumber.stories.js
