fix(notificationPanel): nested interactive controls

--- a/packages/ibm-products-styles/src/components/NotificationsPanel/_notifications-panel.scss
+++ b/packages/ibm-products-styles/src/components/NotificationsPanel/_notifications-panel.scss
@@ -145,14 +145,14 @@ $block-size: 38.5rem;
     // stylelint-disable-next-line carbon/layout-use
     inset-block-start: 3.0625rem;
   }
-  .#{$block-class}__notification:hover,
-  .#{$block-class}__notification:focus {
+  .#{$block-class}__notification-content--wrapper:hover,
+  .#{$block-class}__notification-content--wrapper:focus {
     background-color: $layer-accent-01;
-    .#{$block-class}__dismiss-single-button {
+    + .cds--popover-container .#{$block-class}__dismiss-single-button {
       opacity: 1;
     }
   }
-  .#{$block-class}__notification:focus {
+  .#{$block-class}__notification-content--wrapper:focus {
     border-color: $focus;
     box-shadow:
       inset 0 0 0 2px $focus,
@@ -162,14 +162,8 @@ $block-size: 38.5rem;
   .#{$block-class}__notification {
     position: relative;
     display: flex;
-    align-items: flex-start;
-    padding: $spacing-05;
     border: 0;
     background-color: $layer-01;
-    cursor: pointer;
-    inline-size: 100%;
-    min-block-size: 6.25rem;
-    text-align: start;
     transition: background-color $duration-moderate-02 motion(standard);
     .#{$block-class}__notification-title {
       @include type.type-style('heading-01');
@@ -201,6 +195,15 @@ $block-size: 38.5rem;
       &.#{$block-class}__notification-status-icon-informational {
         fill: $support-info;
       }
+    }
+    .#{$block-class}__notification-content--wrapper {
+      display: flex;
+      align-items: flex-start;
+      padding: $spacing-05;
+      cursor: pointer;
+      inline-size: 100%;
+      min-block-size: 6.25rem;
+      text-align: start;
     }
     .#{$block-class}__notification-content {
       .#{$block-class}__notification-time-label {
