--- a/packages/ibm-products-styles/src/components/Coachmark/_coachmark.scss
+++ b/packages/ibm-products-styles/src/components/Coachmark/_coachmark.scss
@@ -14,6 +14,9 @@
 @use './coachmark-header';
 @use './coachmark-overlay';
 @use './coachmark-tagline';
+@use './bubble';
+@use './coachmark-beacon';
+@use '../../global/styles/mixins' as *;
 
 // Other Carbon settings if needed
 // TODO: @use '@carbon/styles/scss/grid';
@@ -28,4 +31,22 @@ $block-class: #{c4p-settings.$pkg-prefix}--coachmark;
 
 .#{$block-class} {
   position: relative;
+}
+
+// Onboarding/Coachmark/next
+
+$block-class-next: #{c4p-settings.$pkg-prefix}--coachmark__next;
+
+@include block-wrap(#{$block-class}__next) {
+  &.#{$block-class-next}--floating {
+    .#{c4p-settings.$pkg-prefix}__bubble {
+      .#{c4p-settings.$pkg-prefix}__bubble__arrow {
+        display: none;
+      }
+    }
+  }
+
+  span:has(> div > .#{$block-class-next}--content-header--drag-icon) {
+    margin-inline-end: auto;
+  }
 }
