fix: review comments from david and elysia

--- a/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen-body-item.scss
+++ b/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen-body-item.scss
@@ -9,7 +9,7 @@
 @use '../../utilities/carousel/index' as carousel;
 @use '@carbon/styles/scss/spacing' as *;
 
-@include carousel.carouselHostStyles();
+@include carousel.carouselStyles();
 
 :host {
   /* stylelint-disable-next-line declaration-no-important */
