--- a/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen-footer.scss
+++ b/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen-footer.scss
@@ -12,6 +12,14 @@
 $prefix: 'c4p';
 $carbon-prefix: 'cds';
 
+:host {
+  display: flex;
+  inline-size: 100%;
+}
+
+.#{$prefix}--interstitial-screen--footer {
+  block-size: 4rem; //as in cds modal footer
+}
 .#{$prefix}--interstitial-screen--footer-controls {
   display: flex;
 }
