refactor(rolldown): add jsx ext to imports, fix unsupported css syntax

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_FilterPanel.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_FilterPanel.scss
@@ -14,11 +14,6 @@
 @use '../../../../global/styles/project-settings' as c4p-settings;
 @use './animations' as *;
 
-@property --panel-transform {
-  inherits: true;
-  initial-value: 320px;
-  syntax: '<integer>';
-}
 $block-class-component: #{$block-class}-filter-panel;
 
 .#{$block-class-component} {
@@ -171,6 +166,7 @@ $block-class-component: #{$block-class}-filter-panel;
   margin-block-start: auto;
 
   opacity: 1;
+  /* stylelint-disable-next-line carbon/layout-use */
   transform: translateY(64px) translateZ(0);
 
   &.#{$block-class-component}__animationComplete {
