--- a/packages/ibm-products-styles/src/components/TruncatedText/_truncated-text.scss
+++ b/packages/ibm-products-styles/src/components/TruncatedText/_truncated-text.scss
@@ -7,7 +7,7 @@
 
 @use '../../global/styles/project-settings' as c4p-settings;
 @use '../../global/styles/mixins';
-@use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/theme';
 
 $block-class: #{c4p-settings.$pkg-prefix}--truncated-text;
 
@@ -20,7 +20,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--truncated-text;
   }
 
   &__expand-toggle {
-    color: $link-primary;
+    color: theme.$link-primary;
     cursor: pointer;
   }
 }
