--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.scss
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.scss
@@ -11,7 +11,7 @@
 @use '@carbon/styles/scss/utilities' as *;
 @use '@carbon/themes' as *;
 @use '@carbon/styles/scss/spacing' as *;
-@use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/theme';
 @use '@carbon/styles/scss/motion' as *;
 @use '@carbon/styles/scss/config';
 
@@ -71,7 +71,7 @@ $block-class: #{$prefix}--truncated-text;
   @extend %reset-button;
 
   padding: 0 $spacing-01;
-  color: $link-primary;
+  color: theme.$link-primary;
 
   &.#{$block-class}_button-hide {
     display: none;
@@ -80,25 +80,25 @@ $block-class: #{$prefix}--truncated-text;
 
 .#{$block-class}_button-expand {
   &.#{$block-class}_button-layered {
-    background-color: $layer;
+    background-color: theme.$layer;
   }
 
   // Gradient LTR
   &:dir(ltr)::before {
-    @include gradient-bg(90deg, $background);
+    @include gradient-bg(90deg, theme.$background);
   }
 
   &.#{$block-class}_button-layered:dir(ltr)::before {
-    @include gradient-bg(90deg, $layer);
+    @include gradient-bg(90deg, theme.$layer);
   }
 
   // Gradient RTL
   &:dir(rtl)::before {
-    @include gradient-bg(270deg, $background);
+    @include gradient-bg(270deg, theme.$background);
   }
 
   &.#{$block-class}_button-layered:dir(rtl)::before {
-    @include gradient-bg(270deg, $layer);
+    @include gradient-bg(270deg, theme.$layer);
   }
 }
 
