fix(PageHeader): ensures expected positioning even if content component is excluded (#7946)
* feat(PageHeader): start overflow subcomponent

* feat(PageHeader): add breadcrumb wrapper component for overflowing

* fix(PageHeader): only use local overflow handler for bc overflow comp

* fix(PageHeader): account for absence of content element

* chore: update cspell

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -1031,17 +1031,24 @@ $duration: 1000ms;
         transition: opacity motion(standard, productive) $duration-moderate-01;
       }
     }
-    // `animation-timeline: scroll()` only currently supported in Chromium based browsers
-    @supports (animation-timeline: scroll()) {
-      animation-direction: alternate;
-      animation-duration: 1ms; /* Firefox requires this to apply the animation */
-      animation-name: page-header-title-breadcrumb-animation;
-      animation-timeline: scroll(block nearest);
 
-      @media (prefers-reduced-motion: reduce) {
-        animation-name: page-header-title-breadcrumb-animation-reduced-motion;
-        transform: translateY(0);
+    &.#{$pkg-prefix}--page-header-title-breadcrumb-show__with-content-element {
+      // `animation-timeline: scroll()` only currently supported in Chromium based browsers
+      @supports (animation-timeline: scroll()) {
+        animation-direction: alternate;
+        animation-duration: 1ms; /* Firefox requires this to apply the animation */
+        animation-name: page-header-title-breadcrumb-animation;
+        animation-timeline: scroll(block nearest);
+
+        @media (prefers-reduced-motion: reduce) {
+          animation-name: page-header-title-breadcrumb-animation-reduced-motion;
+          transform: translateY(0);
+        }
       }
+    }
+    &.#{$pkg-prefix}--page-header-title-breadcrumb-show__without-content-element {
+      opacity: 1;
+      transform: translateY(0);
     }
   }
 }
