--- a/packages/ibm-products/src/components/StepFlow/story-assets/Tearsheet/_step-tearsheet.scss
+++ b/packages/ibm-products/src/components/StepFlow/story-assets/Tearsheet/_step-tearsheet.scss
@@ -1,3 +1,10 @@
+//
+// Copyright IBM Corp. 2024, 2024
+//
+// This source code is licensed under the Apache-2.0 license found in the
+// LICENSE file in the root directory of this source tree.
+//
+
 @use '@carbon/react/scss/spacing';
 @use '@carbon/react/scss/theme';
 @use '@carbon/react/scss/type';
