fix: udpate export to match as done in utility

--- a/packages/ibm-products-web-components/src/utilities/carousel/_index.scss
+++ b/packages/ibm-products-web-components/src/utilities/carousel/_index.scss
@@ -92,7 +92,7 @@ $animateTime: $duration-moderate-02;
 }
 
 /// Optional: Universal (Lit + React)
-@mixin carouselStyles {
+@mixin carousel {
   @include keyframes;
   @include wrapperStyles;
   @include viewStyles;
