fix: update example styles and link

--- a/packages/ibm-products-web-components/examples/interstitial-screen/src/styles.scss
+++ b/packages/ibm-products-web-components/examples/interstitial-screen/src/styles.scss
@@ -10,6 +10,11 @@
 @use '@carbon/styles/scss/reset';
 @use '@carbon/styles/scss/theme';
 @use '@carbon/styles/scss/themes';
+@use '@carbon/styles/scss/spacing' as *;
+@use '@carbon/styles/scss/type';
+
+$interstitial-block-class: #{c4p}--interstitial-screen;
+$block-class: #{c4p}--interstitial-screen-view-module;
 
 :root {
   @include theme.theme(themes.$white);
@@ -36,4 +41,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.#{$block-class} {
+  margin-block: $spacing-07;
+}
+.#{$block-class}--heading {
+  @include type.type-style('heading-05');
+
+  margin-block-end: $spacing-07;
 }
