--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -765,7 +765,7 @@ $duration: 1000ms;
   }
 
   .#{$block-class}__breadcrumb__content-actions {
-    inline-size: 100%;
+    inline-size: fit-content;
     margin-inline-end: $spacing-04;
   }
 
@@ -856,6 +856,13 @@ $duration: 1000ms;
   .#{$block-class}__content__page-actions {
     display: flex;
     justify-content: right;
+    /* stylelint-disable-next-line carbon/motion-easing-use */
+    transition: opacity motion(standard, productive) $duration-moderate-02;
+
+    &.#{$block-class}__content__page-actions--clipped {
+      opacity: 0;
+      visibility: hidden;
+    }
 
     @include breakpoint-down('md') {
       justify-content: left;
@@ -1012,6 +1019,17 @@ $duration: 1000ms;
     }
   }
 
+  .#{$pkg-prefix}--page-header__breadcrumb__content-actions {
+    opacity: 0;
+  }
+
+  .#{$pkg-prefix}--page-header__breadcrumb__content-actions-with-global-actions--show {
+    opacity: 1;
+    transition:
+      /* stylelint-disable-next-line */ opacity
+      motion(standard, productive) $duration-moderate-01;
+  }
+
   .#{$pkg-prefix}--page-header-title-breadcrumb {
     opacity: 0;
     transform: translateY($spacing-05);
@@ -1022,13 +1040,11 @@ $duration: 1000ms;
     // Target browsers that do not yet support animation-timeline: scroll()
     @supports not (animation-timeline: scroll()) {
       &.#{$pkg-prefix}--page-header-title-breadcrumb-show {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      @media (prefers-reduced-motion: reduce) {
-        transform: translateY(0);
-        /* stylelint-disable-next-line */
-        transition: opacity motion(standard, productive) $duration-moderate-01;
+        @media (prefers-reduced-motion: reduce) {
+          transform: translateY(0);
+          /* stylelint-disable-next-line */
+          transition: opacity motion(standard, productive) $duration-moderate-01;
+        }
       }
     }
 
