--- a/packages/ibm-products/src/components/PageHeader/next/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/PageHeader/next/_storybook-styles.scss
@@ -32,3 +32,20 @@
   background-color: theme.$layer-01;
   block-size: inherit;
 }
+
+[data-hidden] {
+  display: none;
+}
+
+.breadcrumb-bar-button {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  block-size: 40px;
+  inline-size: 40px;
+}
+
+.breadcrumb-bar-action-button {
+  align-items: center;
+  block-size: 40px;
+}
