refactor(sidepanel): selector updated

--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -352,7 +352,7 @@ $clabs-prefix: 'clabs';
   }
 
   // Remove min‑block‑size when the header contains no child elements to prevent unnecessary blank space
-  .#{$block-class}__header:not(:has(*)) {
+  .#{$block-class}__header:empty {
     min-block-size: unset;
   }
 
